New Windows Games:
* Crusader Kings II
* Katawa Shoujo
Updated Windows Games:
* The Witcher 2 - Added Steamcloud info
=2012/7/11=
New Windows Games:
* Aliens vs. Predator Classic
* And Yet It Moves - Steam Only
* Beat Hazard - Steam only
* Blur
* Botanicula
* Bus Driver
* Cave Story+ - Steam only
* Cogs
* Command & Conquer: Generals
* Dark Scavenger
* Din's Curse
* Dungeon Defenders - Steam only
* Empire: Total War
* Guilty Gear X2
* Harry Potter and the Half-Blood Prince
* Heroes of Might and Magic V
* Hinterland
* Hospital Tycoon
* Jagged Alliance 2 Gold - Steam only
* Lost Planet: Extreme Condition
* Lumines
* Majesty Gold HD
* Majesty 2
* Mosby's Confederacy
* Napoleon: Total War
* Night Sky
* Nimbus - Steam only
* Pocket Tanks
* Rayman Origins
* Risen
* Risen 2
* Rock of Ages - Steam only
* Saint's Row 2
* Sequence - Steam only
* SpaceChem
* Spectromancer - Steam only
* Starscape
* Star Wars: The Clone Wars - Republic Heroes
* Supreme Commander 2
* Yesterday
Updated Windows Games:
* Command & Conquer 3 - Added XP paths
* Doom 3 - Added steam path
* Rome: Total War - Added steam paths
* Tropico 2 - Added steam paths
* VVVVVV - Added new 2.0 paths
6/15/2011
New Windows Games:
* Alan Wake - GoG only
* Alan Wake American Nightmare - GoG only
* Blackwell Deception
* ArcaniA (Gothic 4) - Contributed by Arc Angel
* ArcaniA: Fall of Setarrif - Contributed by Arc Angel
* Bastion - Vista/7 only
* Dear Esther - Steam only
* Dinner Date - Steam only
* Driver San Francisco - Contributed by Arc Angel
* Explodemon - Contributed by Arc Angel
* Full throttle - ScummVM only
* Jurassic Park: The Game - Contributed by Arc Angel
* King Arthur II - Contributed by Arc Angel
* Lone Survivor - Contributed by Arc Angel
* Normality - GoG only
* Sam & Max Hit The Road - ScummVM only
* Space Rangers 2: Reboot - GoG only
* Superbrothers: Sword & Sorcery
* The Walking Dead - Contributed by Arc Angel
* Wing Commander IV: The Price Of Freedom - GoG only
New Steam Games: